fix : fix problems that shows scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,11 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 h1 {
